# pvv-mcp-server

./: .gitignore  .mcpbignore  01_check.bat  02_test.bat  11_build.bat  12_twine_upload.bat  13_pip_install_from_testpypi.bat  81_pip_install.bat  82_mcpb_pack.bat  99_mcp_publisher.bat  CHANGELOG.md  MANIFEST.in  README.md  create_mcpb.sh  manifest.json  manifest.pip.json  manifest_uvx.json  mcp_config.env  mcpb_pack.bat  pip_install.bat  pvv-mcp-server.avatar.json  pvv-mcp-server.avatar.oneshot.json  pvv-mcp-server.yaml  pyproject.toml  requirements.txt  server.json
.github/workflows/: 11_mcpb_generate_action.yaml
download/: pvv-mcp-server-0.1.1.mcpb  pvv-mcp-server-0.2.1.mcpb  pvv-mcp-server-0.3.0.mcpb  pvv-mcp-server-0.4.0.mcpb  pvv-mcp-server-0.4.1-uvx.mcpb  pvv-mcp-server-0.4.1.mcpb  pvv-mcp-server-0.5.0-uvx.mcpb  pvv-mcp-server-0.5.0.mcpb
pvv_mcp_server/: main.py  mod_avatar_manager.py  mod_service.py  mod_speak.py  mod_speak_metan_aska.py  mod_speakers.py
pvv_mcp_server/avatar/: mod_avatar.py  mod_avatar_dialog.py  mod_avatar_part.py  mod_load_image.py  mod_update_position.py
tests/: test_avatar_manager.py  test_emotion.py  test_service.py  test_speak.py  test_speak_metan_aska.py  test_speaker_info.py  test_speakers.py
tests/avatar/: test_avatar.py  test_avatar_dialog.py  test_avatar_part.py  test_load_image.py  test_load_pixmaps.py  test_right_click_context_menu.py  test_update_frame.py  test_update_position.py
